Followers from list implemented.

--- a/04_projects/01_react_vite/00-hola-mundo/src/App.css
+++ b/04_projects/01_react_vite/00-hola-mundo/src/App.css
@@ -4,6 +4,12 @@
   gap: 8px
 }
 
+.tw-followCard-listContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem
+}
+
 .tw-followCard {
   display: flex;
   align-items: center;
