Mouse pointer dissappears when the dark circle appears.

--- a/04_projects/03_useEffect_mouseFollower/src/index.css
+++ b/04_projects/03_useEffect_mouseFollower/src/index.css
@@ -45,10 +45,13 @@ button {
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
+  margin: 2rem;
 }
+
 button:hover {
   border-color: #646cff;
 }
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
@@ -65,4 +68,8 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+body.no-cursor {
+  cursor: none;
 }
