--- a/04_projects/04_prueba_tecnica_react/src/App.css
+++ b/04_projects/04_prueba_tecnica_react/src/App.css
@@ -6,3 +6,8 @@ main {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0 auto
 }
+
+body {
+  background-color: #034077;
+  color: white;
+}
