Minor visual improvements.

--- a/04_projects/04_prueba_tecnica_react/src/App.css
+++ b/04_projects/04_prueba_tecnica_react/src/App.css
@@ -4,7 +4,8 @@ main {
   place-items: center;
   max-width: 800px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  margin: 0 auto
+  margin: 0 auto;
+  &:focus-visible { outline: none }
 }
 
 body {
@@ -41,12 +42,13 @@ img {
 .content {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   padding: 2rem 4rem 2rem 4rem;
   margin: 2rem;
   width: 75%;
   max-width: 75%;
+  min-height: 50vh;
   gap: 1rem;
   background-color: #000000;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 800 800'%3E%3Cg %3E%3Ccircle fill='%23000000' cx='400' cy='400' r='600'/%3E%3Ccircle fill='%23230046' cx='400' cy='400' r='500'/%3E%3Ccircle fill='%232f0052' cx='400' cy='400' r='400'/%3E%3Ccircle fill='%233b075e' cx='400' cy='400' r='300'/%3E%3Ccircle fill='%2348156a' cx='400' cy='400' r='200'/%3E%3Ccircle fill='%23552277' cx='400' cy='400' r='100'/%3E%3C/g%3E%3C/svg%3E");
