--- a/04_projects/04_prueba_tecnica_react/src/App.css
+++ b/04_projects/04_prueba_tecnica_react/src/App.css
@@ -17,7 +17,10 @@ body {
 
 img {
   max-width: 100%;
+  border-color: aliceblue;
   height: 100%;
+  border: 1rem;
+  border-radius: 2em 20px 2.5em 0.2in;
 }
 
 .fact {
@@ -75,4 +78,8 @@ img {
 
 .error a {
   color: white;
+}
+
+.otro {
+  margin-top: 4rem;
 }
