--- a/04_projects/05-react-movies-database/src/App.css
+++ b/04_projects/05-react-movies-database/src/App.css
@@ -9,10 +9,12 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 0px;
 }
 
 form {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
@@ -20,6 +22,7 @@ form {
 ul {
   display: flex;
   flex-direction: row;
+  justify-content: center;
   flex-wrap: wrap;
   gap: 2rem;
 }
