Two debounce implementations. One custom and one with a third party library.

--- a/04_projects/05-react-movies-database/src/App.css
+++ b/04_projects/05-react-movies-database/src/App.css
@@ -13,9 +13,10 @@ main {
   width: 100% ;
 }
 
-form {
+.form {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  gap: 1rem;
   justify-content: center;
   align-items: center;
 }
